fixed ugly main page list on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,18 @@ h2 {
 
 div#mainpagelist {
     background-color: rgba(189, 187, 175, 0.72);
-    width: 25%;
+    width: 50%;
     margin: 0 auto;
     text-align: center;
     padding: 8px 12px;
 
+}
+
+.mainpagelist2,
+.mainpagelistcontent {
+    text-align: center;
+    padding: 4px 12px 0px 8px;
+    list-style-type: none;
 }
 
 div#mainpagelist,
